# urlbot

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
modules/: __init__.py  data_extraction.py  data_processing.py  llm_interface.py  query_engine.py
